# aurelia-asset

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  tauri-release.yml
.lovable/: plan.md
data/: sponsors.json
public/: llms.txt  robots.txt  sitemap.xml
public/downloads/: PortfolioTracker-0.1.0-1.x86_64.rpm  PortfolioTracker_0.1.0_amd64.deb
scripts/: patch-android-manifest.mjs  patch-android-signing.mjs  setup-sherpa-onnx.sh  tauri-build-local-ai.sh  tauri-dev-local-ai.sh  tauri-prepare.mjs
src/: client.tsx  routeTree.gen.ts  server.ts  styles.css
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-ai.toml  allow-download-model.toml  allow-read-import-file.toml  allow-save-export-file.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  export.rs  mod.rs  models.rs
src/assets/: landing-hero.png.asset.json  logo.png.asset.json  og-image.png.asset.json  portfolio-tracker-apk.asset.json  portfolio-tracker-appimage.asset.json  portfolio-tracker-deb.asset.json  portfolio-tracker-rpm.asset.json
src/components/: ai-model-setup-dialog.tsx  app-shell.tsx  budget-pie-card.tsx  category-pie-card.tsx  chart-frame.tsx  color-swatch-picker.tsx  credit-cards-manager.tsx  holding-dialog.tsx  holdings-charts.tsx  landing-ambient.tsx  page-loader.tsx  sankey-chart.tsx  sponsor-banner.tsx  theme-toggle.tsx  tour-launcher.tsx  transaction-dialog.tsx  transactions-panel.tsx
src/hooks/: use-portfolio-history.ts  use-pull-to-refresh.ts  use-theme.ts
src/i18n/: index.ts  use-language.ts
src/lib/: chart-theme.ts  currency.ts  export-json.worker.ts  export.ts  format.ts  i18n-t.ts  repo.functions.ts  sankey-build.ts  secure-storage.ts  site-config.ts  sponsors-types.ts  sponsors.functions.ts  store.tsx  types.ts
src/routes/: __root.tsx  admin.tsx  assistant.tsx  cashflow.tsx  dashboard.tsx  holdings.tsx  index.tsx  performance.tsx  (+2 more)
(+46 files in other folders)
